# vulkan-engine

./: CMakeLists.txt
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  texture_asset.cpp  texture_asset.h
shaders/: default_lit.frag  model_lighting.frag  model_lighting.frag.spv  model_lighting.vert  model_lighting.vert.spv  textured_lit.frag  triangle.frag  triangle.vert
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_textures.cpp  vk_textures.h  vk_types.h
src/utils/: camera.cpp  camera.h  vk_descriptor.cpp  vk_descriptor.h
